tests/examples/good/garbage_collector/good522.lat
int main() {
    A a;
    a = new A;
    return 0;
}


class A {
    int a;
}

