tests/examples/bad/new_class_not_exist.lat
int main() {
    A a = new A;
    return 1;
}
